fix(homepage): dark mode style refinements

--- a/src/components/HomePageHighlights.module.scss
+++ b/src/components/HomePageHighlights.module.scss
@@ -189,14 +189,15 @@
 // ==============================================================
 // Dark mode
 // ==============================================================
-// :global(.dark-mode) {
-//   .featured-external-projects {
-//     &:before {
-//       background-color: var(--color-neutrals-050);
-//     }
-
-//     &:after {
-//       display: none;
-//     }
-//   }
-// }
+:global(.dark-mode) {
+  .featured-external-projects {
+    &:before {
+      background-color: var(--color-neutrals-050);
+      opacity: .5;
+    }
+    
+    &:after {
+      display: none;
+    }
+  }
+}
