--- a/src/components/ProjectModule.module.scss
+++ b/src/components/ProjectModule.module.scss
@@ -293,7 +293,11 @@ a.project-module-footer-link:hover {
 // ==============================================================
 :global(.dark-mode) {
   .project-module {
-    box-shadow: none;
-    // background-color: var(--color-neutrals-100);
+    box-shadow: 0px 1.66035px 2.10311px rgba(3, 15, 16, 0.0393604), 0px 3.99006px 5.05408px rgba(3, 15, 16, 0.056545), 0px 7.51293px 9.51638px rgba(3, 15, 16, 0.07), 0px 13.4018px 16.9756px rgba(3, 15, 16, 0.083455), 0px 25.0666px 31.751px rgba(3, 15, 16, 0.10064), 0px 60px 76px rgba(3, 15, 16, 0.14);
+    background-color: var(--color-neutrals-100);
+  }
+
+  .project-module-icon {
+    box-shadow: 0 0 0 4px var(--color-background);
   }
 }
